# webview2

./: .gitignore  CMakeLists.txt  README.md  build.bat  install_deps.bat  package-lock.json  package.json
.github/workflows/: automation-app-build.yml  build.yml
godot_addon/addons/livekit_webview/: LiveKitAPI.gd  LiveKitManager.gd  example_usage.gd  plugin.cfg  plugin.gd  webview_godot.gdextension
godot_addon/addons/livekit_webview/html/: livekit.html
launcher/: launcher.cpp
public/: app.js  index.html
src/: register_types.cpp  webview_window.cpp  webview_window.h
src/automation/: recorder.js
